7903038: jcstress: More Coherence examples